<resources>
    <string name="app_name">My Calculator App</string>
    <string name="action_settings">Settings</string>
    <string name="addition">Addition</string>
    <string name="subtraction">Subtraction</string>
    <string name="multiplication">Multiplication</string>
    <string name="result">Result</string>
    <string name="calculate">Calculate</string>
    <string name="first_number">First Number</string>
    <string name="second_number">Second Number</string>
    <string name="hint_number">eg 12345</string>
    <string name="title_maths_operation">Maths Operation</string>
</resources>
